--- a/middle.css
+++ b/middle.css
@@ -3,26 +3,85 @@
 * {
     margin: 0;
     padding: 0;
-  }
-  
-  body {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
   }
 
+  ul {
+    list-style: none;
+  }
+  
+  body {
+    width: 100%;
+  }
+
+/* .work-section {
+  width: 100%;
+} */
+
+.flex {
+  display: flex;
+}
+
+.column {
+  flex-direction: column;
+}
+
 .works-section-title {
-    text-align: center;
-    font-size: 700;
-    font-size: 40px;
-    color: #172B4D;
-    font-family: Inter, san sans-serif;
+  text-align: center;
+  font-size: 40px;
+  color: #172B4D;
+  font-family: 'Inter', sans-serif;
 }
 
 .works-grid-container {
-    display: grid;
-    grid-template-columns: 100%;
+  display: grid;
+  gap: 24px;
+  justify-content: center;
+  width: 100%;
+  margin: 62px auto;
 }
-.works-grid-container img {
-    width: 100%;
+
+.card img {
+  width: 327px;
+  max-width: 100%;
+  height: 252px;
+}
+
+.card {
+  width: 100%;
+  height: 474px;
+  border: 1px solid #D0D9D4;
+  border-radius: 8px;
+}
+
+.card-details {
+  align-items: center;
+}
+.card-details h2 {
+  margin: 16px 16px 7px 16px;
+}
+ul {
+  border-radius: 4px;
+  margin: 20px 16px;
+  justify-content: space-between;
+}
+ul li{
+  background: #ebf0ee;
+  margin: 0px 4px;
+  padding: 8px;
+  font-size: 12px;
+  font-weight: 600;
+  text-align: left;
+  border-radius: 4px;
+}
+.card-details button {
+  margin: 15px 102px 24px 103px;
+  padding: 12px;
+  background-color:#36b37f;
+  border: none;
+  border-radius: 4px;
+  color: #FFFFFF;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
 }
