--- a/middle.css
+++ b/middle.css
@@ -1,22 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
+}
 
-  ul {
-    list-style: none;
-  }
+ul {
+  list-style: none;
+}
   
-  body {
-    width: 100%;
-  }
-
-/* .work-section {
+body {
   width: 100%;
-} */
+  font-family: 'Inter', sans-serif;
+}
 
 .flex {
   display: flex;
@@ -30,7 +27,6 @@
   text-align: center;
   font-size: 40px;
   color: #172B4D;
-  font-family: 'Inter', sans-serif;
 }
 
 .works-grid-container {
@@ -49,39 +45,138 @@
 
 .card {
   width: 100%;
-  height: 474px;
   border: 1px solid #D0D9D4;
   border-radius: 8px;
 }
 
 .card-details {
   align-items: center;
+  gap: 12px;
+  color: #172B4d;
 }
+
 .card-details h2 {
-  margin: 16px 16px 7px 16px;
+  margin-top: 16px;
 }
-ul {
-  border-radius: 4px;
-  margin: 20px 16px;
-  justify-content: space-between;
+
+.list {
+  gap: 8px;
 }
-ul li{
+
+.list li {
   background: #ebf0ee;
-  margin: 0px 4px;
-  padding: 8px;
+  padding: 12px;
   font-size: 12px;
   font-weight: 600;
-  text-align: left;
   border-radius: 4px;
 }
+
+.skills li {
+  background: #fff;
+  padding: 12px;
+  font-size: 12px;
+  font-weight: 600;
+  border-radius: 4px;
+}
+
 .card-details button {
   margin: 15px 102px 24px 103px;
   padding: 12px;
   background-color:#36b37f;
   border: none;
   border-radius: 4px;
-  color: #FFFFFF;
+  color: #ffffff;
   font-weight: 500;
   font-size: 17px;
   line-height: 24px;
+}
+
+.about-me {
+  background-image: url(./Icons/about-top.svg), url(./Icons/about_bg.svg);
+  background-repeat: no-repeat;
+  background-position: right -40px, 0 270px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  }
+
+.about-me button {
+margin: 15px 102px 24px 103px;
+padding: 8px;
+background-color:#36b37f;
+border: none;
+border-radius: 4px;
+color: #ffffff;
+font-weight: 500;
+font-size: 15px;
+line-height: 24px;
+}
+
+button {
+  cursor: pointer;
+}
+
+button:hover {
+  background: #36B37F;
+  box-shadow: 0px 8px 16px rgba(54, 179, 127, 0.24);
+}
+
+button:active {
+  background: #008552;
+}
+
+.about-me h2 {
+font-weight: 700;
+font-size: 40px;
+line-height: 52px;
+color: #172b4d;
+}
+
+.about-me p {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 32px;
+  margin: 20px 15px 0px 15px;
+  color: #42526e;
+}
+
+.about-me-grid {
+  display: grid;
+  gap: 24px;
+  justify-content: center;
+  width: 100%;
+  margin: 62px auto;
+}
+.about-me-grid-item {
+  background: #EBF0EE;
+  border: 1px solid #C1C7D0;
+  border-radius: 8px;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
+  text-align: center;
+  height: 316px;
+}
+
+.about-me-grid-item h3 {
+  color: #172B4d;
+}
+
+.about-me-grid-item ul {
+  color:  #36b37e;
+}
+
+.iconic {
+  background-color: #fff;
+  padding: 18px;
+  border-radius: 50%;
+  margin-top: 40px;
+  box-shadow: 0px 16px 24px rgba(37, 47, 137, 0.08);
+}
+
+.skills {
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 285px;
 }
